--- a/APP-A2/APP-A2/APP-A2.vcxproj
+++ b/APP-A2/APP-A2/APP-A2.vcxproj
@@ -127,7 +127,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Account.cpp" />
     <ClCompile Include="APP-A2.cpp" />
+    <ClCompile Include="Current.cpp" />
+    <ClCompile Include="Savings.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Account.h" />
+    <ClInclude Include="Current.h" />
+    <ClInclude Include="Savings.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
