holy moly i locked in

--- a/APP-A2/APP-A2/APP-A2.vcxproj
+++ b/APP-A2/APP-A2/APP-A2.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -128,14 +128,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Account.cpp" />
-    <ClCompile Include="APP-A2.cpp" />
+    <ClCompile Include="LincBank.cpp" />
     <ClCompile Include="Current.cpp" />
+    <ClCompile Include="InterestEarnings.cpp" />
     <ClCompile Include="Savings.cpp" />
+    <ClCompile Include="Transaction.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Account.h" />
     <ClInclude Include="Current.h" />
+    <ClInclude Include="InterestEarnings.h" />
     <ClInclude Include="Savings.h" />
+    <ClInclude Include="Transaction.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
